# tbir

./: Cargo.toml  rust-toolchain.toml
.github/workflows/: ci.yaml
src/: main.rs
